2010-05-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* curl.m4: Make it an error to not be able to build embedded curl.

2010-05-24  Andreia Gaita  <avidigal@novell.com>

	* curl.m4: tweak curl configure options to not build unnecessary
	things that can potentially break the build on dev systems

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* curl.m4: Show configure failure reason for embedded curl.

	* chrome.m4: Add parenthesis around failure reasons to make configure output
	more readable.

2010-05-05  Chris Toshok  <toshok@ximian.com>

	* pal.m4: add hardcoded dbus-glib network service.

2010-04-28  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: remove ff36 bridge.
	using --define-variable=includetype=unstable on pkg-config for
	the ff3 bridge, we can get cflags that work for both libxul 1.9.1
	and 1.9.2, so ff3 now supports both.

2010-04-08  Andreia Gaita  <avidigal@novell.com>

	* build-configuration.m4: add build-only option to building mono

2010-04-08  Chris Toshok  <toshok@ximian.com>

	* chrome.m4: check for more chrome executables, and remove the
	python check since we aren't using python to sign crx files
	anymore.

2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* m4/curl.m4: move CUSTOM_SUBDIR_OPTION to utilities.m4
	* m4/utilities.m4: define m4_ifblank/m4_ifnblank helpers

2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* various.m4: move curl checks to curl.m4
	* curl.m4: add support for --with-curl=no|embedded|system options
	* ax_file_escapes.m4, m4/ax_print_to_file.m4: helper files for
	CUSTOM_SUBDIR_OPTION

2010-03-10  David Reveman  <davidr@novell.com>

	* gallium.m4: GALLIUM_CFLAGS and GALLIUM_LIBS are used in
	src/Makefile.am.

2010-03-08  Chris Toshok  <toshok@ximian.com>

	* pal.m4: hardcode more stuff about pal (this time for media
	capture).

2010-03-04  Andreia Gaita  <avidigal@novell.com>

	* build-configuration.m4: Add --with-manual-mono flag to disable