@@ -5,16 +5,25 @@ AC_DEFUN([MOONLIGHT_CHECK_CURL],
 		[], [with_curl=embedded])
 
 	if test x$with_curl = xembedded; then
-		PKG_CHECK_MODULES(OPENSSL, openssl, [has_openssl=yes], [has_openssl=no])
-		if test x$has_openssl = xyes; then
-			CUSTOM_SUBDIR_OPTION(curl, [--disable-shared --disable-manual --without-libssh2 --disable-ldap --disable-ldaps --without-libidn])
+		mozilla_nss_pcs="nss mozilla-nss firefox-nss xulrunner-nss seamonkey-nss"
+		for pc in $mozilla_nss_pcs; do
+				if $PKG_CONFIG --exists $pc; then
+				        AC_MSG_RESULT($pc)
+				        mozilla_nss=$pc
+				        break;
+				fi
+		done
+		PKG_CHECK_MODULES(NSS, $mozilla_nss, [has_nss=yes], [has_nss=no])
+
+		if test x$has_nss = xyes; then
+			CUSTOM_SUBDIR_OPTION(curl, [--disable-shared --disable-manual --without-libssh2 --disable-ldap --disable-ldaps --without-libidn --without-ssl --with-nss])
 				
 			CURL_CFLAGS='-I$(top_srcdir)/curl/include'
-			CURL_LIBS="\$(top_builddir)/curl/lib/libcurl.la $OPENSSL_LIBS"
+			CURL_LIBS="\$(top_builddir)/curl/lib/libcurl.la $NSS_LIBS"
 
 			AC_DEFINE([HAVE_CURL], [1], [curl support for the bridge])
 		else
-			AC_MSG_ERROR(embedded curl build requires openssl devel package)
+			AC_MSG_ERROR(embedded curl build requires nss devel package)
 		fi
 
 	elif test x$with_curl = xsystem; then
