@@ -1,3 +1,7 @@
+2010-06-22  Andreia Gaita  <avidigal@novell.com>
+
+	* curl.m4: use nss instead of openssl to be able to use existing store
+
 2010-05-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* curl.m4: Make it an error to not be able to build embedded curl.
